--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  color:#fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --bgcoor: #222;
 }
+
+
+body{
+    min-height: 100vh;
+    line-height: 26px;
+    font-size: 15px;
+    color: #fff;
+    scroll-behavior: smooth;
+    background-color: var(--bgcoor)!important;
+    font-family: 'Poppins', sans-serif;
+    
+}
+
+/* header css */
+
+
+    .nav-link{
+       color:white !important;
+       margin: 5px ;
+       border:none;
+       background: none !important;
+    }
+      
+
+    .nav-link:hover{
+      color: #33f4cd !important;
+      /* border:1px solid #33f4cd !important; */
+      border-radius: 10px;
+      box-shadow: inset 0px 0px 0px 2px;
+  
+      /*  */
+      
+    }
+
+    .navbar-toggler:focus {
+      text-decoration: none;
+      /* outline: 0; */
+      box-shadow: 4px 2px 2px #fff !important;
+  }
+
+  .navbar-toggler-icon {
+    filter: invert(1);
+}
+
+
+.nav-link {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+/* header css */
+
+
+/* ==== cursor ==== */
+/* .cursor{
+  height:40px;
+  width:40px;
+  background-color:white;
+  border-radius:50%;
+  position:absolute;
+  transform: translate(-50%,-50%);
+  pointer-events:none;
+  cursor:none;
+  z-index: 9;
+  mix-blend-mode: difference;
+  box-shadow: 0px 0px 30px white;
+} */
+
+/* ==== cursor ==== */
