--- a/src/layout/Footer/Footer.css
+++ b/src/layout/Footer/Footer.css
@@ -1,42 +1,55 @@
 
- .footer_sec {
+
+
+ .footer_sec{
+    /* background-size: 100% 100% !important;  */
+    background-position: center;
+    width: 100%; 
+    /* min-height: 440px; */
+    background-color: red;
+    background-color: #fff765;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 400px;
-    padding-top: 100px;
-    background: #ffffff;
 }
 
-.curve {
-    position: absolute;
-    height: 250px;
+.foot_inner{
     width: 100%;
-    bottom: 0;
-    text-align: center;
+    height: 100%;
+    background-color:#00000065;
+    position: absolute;
+    top:0px;
+    left: 0px;
 }
 
-.curve::before {
-    content: '';
-    display: block;
-    position: absolute;
-    border-radius: 100% 50%;
-    width: 55%;
-    height: 100%;
-    transform: translate(85%, 60%);
-    background-color: #ffffff;
+footer {
+    /* background: url("../../img/bg_2.jpeg"); */
+    background-repeat: no-repeat; 
+    background-size: 100% 100%;
+    background-position: center;
+    position: relative;
+    z-index: 1;
 }
 
-.curve::after {
+footer::before {
     content: '';
-    display: block;
-    position: absolute;
-    border-radius: 100% 50%;
-    width: 55%;
     height: 100%;
-    background-color: #776fe8;
-    transform: translate(-4%, 40%);
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color:#00000065;
     z-index: -1;
-}  
+}
 
+.text-reset > i{
+   color: #fff!important;
+   width:10px;
+   height: 10PX;
+}
+
+.text-reset > i:hover{
+    width:10px;
+    height: 10PX;
+    border-radius: 50%;
+    color: #3bfad4 !important;
+    box-shadow: 0px 2px 4px #3bfad4;
+}
